--- a/frontend/src/app/core/modules/form-builder/components/form-admin/form-input/form-input.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/form-admin/form-input/form-input.component.html
@@ -6,34 +6,8 @@
   </div>
 </div>
 
-<div *ngIf="!isNewRowInput" class="input-container" [ngSwitch]="formData.constructor.name" (mouseenter)="showPanel=true" (mouseleave)="showPanel=false">
-  <div *ngSwitchCase="'TextInput'">
-    <label for="{{uniqueId}}" class="form-label">{{formData.label}}</label>
-    <input type="text" class="form-control" id="{{uniqueId}}">
-    <div class="form-text">{{formData.helpText}}</div>
-  </div>
-  <div *ngSwitchCase="'Textarea'">
-    <label for="{{uniqueId}}" class="form-label">{{formData.label}}</label>
-    <textarea class="form-control textarea-input" id="{{uniqueId}}" rows="{{formData.rows}}"></textarea>
-    <div class="form-text">{{formData.helpText}}</div>
-  </div>
-  <div *ngSwitchCase="'Selectbox'">
-    <label for="{{uniqueId}}" class="form-label">{{formData.label}}</label>
-    <select class="form-select" aria-label="Default select example" id="{{uniqueId}}">
-      <option *ngFor="let option of formData.options"
-              [value]="option">
-        {{option}}
-      </option>
-    </select>
-    <div class="form-text">{{formData.helpText}}</div>
-  </div>
-  <div *ngSwitchCase="'Checkbox'">
-    <div class="form-check" *ngFor="let option of formData.options">
-      <input class="form-check-input" type="checkbox" id="{{option}}" name="{{option}}" value="{{option}}">
-      <label class="form-check-label" for="{{option}}">{{option}}</label>
-    </div>
-    <div class="form-text">{{formData.helpText}}</div>
-  </div>
+<div *ngIf="!isNewRowInput" class="input-container" (mouseenter)="showPanel=true" (mouseleave)="showPanel=false">
+  <app-form-input-public [formData]="formData"></app-form-input-public>
 
   <app-animation-hider *ngIf="isAdmin" [show]="showPanel">
     <div>
