--- a/frontend/src/app/plugins/modules/form/form-v1/pages/form-v1-admin/form-v1-admin.component.html
+++ b/frontend/src/app/plugins/modules/form/form-v1/pages/form-v1-admin/form-v1-admin.component.html
@@ -1,1 +1,1 @@
-<app-form-builder [formData]="settings.form"></app-form-builder>
+<app-form-builder [formData]="settings.form" (refresh)="refreshView()"></app-form-builder>
