--- a/frontend/src/app/core/modules/form-builder/components/form-public/form-public/form-public.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/form-public/form-public/form-public.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="form">
     <div class="form-row row" *ngFor="let rowData of formData;index as x">
       <div class="col" *ngFor="let columnData of rowData;index as y">
-        <div class="input-container" [ngSwitch]="columnData.constructor.name">
+        <div class="input-container position-{{$any(columnData).position}}" [ngSwitch]="columnData.constructor.name">
           <div *ngSwitchCase="'TextInput'">
             <label for="{{x}}{{y}}" class="form-label">{{columnData.label}}</label>
             <input type="text" class="form-control" id="{{x}}{{y}}" [formControlName]="columnData.name">
@@ -23,10 +23,10 @@
             </select>
             <div class="form-text">{{columnData.helpText}}</div>
           </div>
-          <div *ngSwitchCase="'Checkbox'">
+          <div class="checkbox" *ngSwitchCase="'Checkbox'">
             <div class="form-check" *ngFor="let option of $any(columnData).options">
-              <input class="form-check-input" type="checkbox" id="{{option.option}}" name="{{option.option}}" [formControlName]="option.option">
               <label class="form-check-label" for="{{option.option}}">{{option.option}}</label>
+              <input class="form-check-input" type="checkbox" id="{{option.option}}" name="{{option.option}}" [formControlName]="option.option">
             </div>
             <div class="form-text">{{columnData.helpText}}</div>
           </div>
