--- a/frontend/src/app/core/modules/form-builder/components/form-public/form-public/form-public.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/form-public/form-public/form-public.component.html
@@ -8,6 +8,9 @@
             <input type="text" class="form-control" id="{{x}}{{y}}" [formControlName]="columnData.name">
             <div class="form-text">{{columnData.helpText}}</div>
           </div>
+          <div *ngSwitchCase="'Button'">
+            <button type="submit" class="btn btn-primary">{{columnData.label}}</button>
+          </div>
           <div *ngSwitchCase="'Textarea'">
             <label for="{{x}}{{y}}" class="form-label">{{columnData.label}}</label>
             <textarea class="form-control textarea-input" id="{{x}}{{y}}" rows="{{$any(columnData).rows}}" [formControlName]="columnData.name"></textarea>
