--- a/frontend/src/app/plugins/modules/form/form-v1/components/form-v1/form-v1.component.html
+++ b/frontend/src/app/plugins/modules/form/form-v1/components/form-v1/form-v1.component.html
@@ -1,1 +1,1 @@
-<app-form-public [formData]="settings.form"></app-form-public>
+<app-form-public [formData]="settings.form" (formSubmitted)="formSubmitted($event)"></app-form-public>
