--- a/frontend/src/app/plugins/modules/form/components/form/form.component.html
+++ b/frontend/src/app/plugins/modules/form/components/form/form.component.html
@@ -1,1 +1,1 @@
-<app-form-public [formData]="settings.form" (formSubmitted)="formSubmitted($event)"></app-form-public>
+<app-form-public [formData]="settings.form" (formSubmitted)="formSubmitted($event)" [isSend]="isSend"></app-form-public>
