--- a/frontend/src/app/plugins/modules/video/pages/video-admin/video-admin.component.html
+++ b/frontend/src/app/plugins/modules/video/pages/video-admin/video-admin.component.html
@@ -4,7 +4,7 @@
       <div>
         <div class="mb-3">
           <label for="input-video" class="form-label">Odkaz na video z youtube</label>
-          <input type="url" class="form-control" id="input-video" [value]="settings.videoPath">
+          <input type="url" class="form-control" id="input-video" formControlName="videoPath">
         </div>
       </div>
     </div>
