--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.html
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.html
@@ -38,4 +38,7 @@
       </div>
   </div>
 </div>
+  <div class="lock" (click)="locked = !locked">
+    <mat-icon>{{locked ? 'lock' : 'lock_open'}}</mat-icon>
+  </div>
 </div>
