--- a/frontend/src/app/page/pages/page-builder/page-builder.component.html
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row" [class.grid-item-dragged]="gridDragged$ | async">
   <div class="col-md-2">
-    <app-menu-builder></app-menu-builder>
+    <app-menu-builder (locketEmitter)="menuLocked = $event"></app-menu-builder>
   </div>
   <div class="col-md-10">
     <app-palette-builder [pageDetail]="pageDetail"></app-palette-builder>
