--- a/frontend/src/app/core/components/hidder/animation-hider/animation-hider/animation-hider.component.html
+++ b/frontend/src/app/core/components/hidder/animation-hider/animation-hider/animation-hider.component.html
@@ -1,3 +1,3 @@
-<div [@showHide]="show ? 'show' : 'hide'">
+<div [@showHide]="show ? 'show' : 'hide'" [class]="show ? 'show' : 'hide'">
   <ng-content></ng-content>
 </div>
