--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.css
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.css
@@ -42,6 +42,7 @@ i.icon-move{
   top: 116px;
   background-color: #fff;
   padding: 7px;
+  cursor: pointer;
 }
 
 /*.menu-image:hover + i.icon-move{*/
