--- a/frontend/src/app/page/pages/page-builder/page-builder.component.html
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.html
@@ -12,7 +12,7 @@
   <div [class]="menuLocked ? 'col-md-2' : 'menu-unlocked'" [@visibleMenu]="getMenuState()" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseLeave()">
     <app-menu-builder (locketEmitter)="menuLocked = $event"></app-menu-builder>
   </div>
-  <div [class]="menuLocked ? 'col-md-10' : 'col-md-12'" >
+  <div [class]="menuLocked ? 'col-md-10' : 'col-md-12'" class="builder" >
     <app-palette-builder [pageDetail]="pageDetail"></app-palette-builder>
   </div>
 <!--  {{namePlugin}}-->
