--- a/frontend/src/app/public/pages/public/public.component.html
+++ b/frontend/src/app/public/pages/public/public.component.html
@@ -1,2 +1,4 @@
-<app-public-page-block [pageBlock]="pageBlock"  *ngFor="let pageBlock of pageDetail.pageBlocks">
-</app-public-page-block>
+<div class="container-wrap">
+  <app-public-page-block [pageBlock]="pageBlock" *ngFor="let pageBlock of pageDetail.pageBlocks">
+  </app-public-page-block>
+</div>
