--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -80,7 +80,7 @@ a {
 }
 
 .grid-stack > .grid-stack-item > .grid-stack-item-content {
-  font-size: 0.85vw;
+  font-size: 1em;
   overflow-y: hidden !important;
 }
 
