--- a/frontend/src/app/layout/components/layout/layout.component.html
+++ b/frontend/src/app/layout/components/layout/layout.component.html
@@ -122,7 +122,7 @@
             [email]="'example@mail.com'"
             size="30"
           />
-          <span class="hidden-xs">Alexander Pierce</span>
+          <span class="hidden-xs">{{userService.settings.fullName}}</span>
         </a>
         <ul class="dropdown-menu">
           <!-- User image -->
