--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.html
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.html
@@ -29,7 +29,15 @@
     </ul>
   </div>
   <div class="tab-pane fade menu-element d-flex flex-wrap active show" id="custom-content-below-profile" role="tabpanel" aria-labelledby="custom-content-below-profile-tab">
-      <div (mouseleave)="showMoveIcon = false" (mouseenter)="showMoveIcon = true" class="menu-element-item grid-stack-item-menu" *ngFor="let abstractMenuPluginResolver of menuPluginResolverServices.abstractMenuPluginResolver" [attr.gs-w]="abstractMenuPluginResolver.gridWidth()" [attr.gs-h]="abstractMenuPluginResolver.gridHeight()">
+
+     <div class="grid-row-menu" [sortablejs]="rows" [sortablejsOptions]="{group: {name: 'menu-row', pull: 'clone',put: false}}" >
+       <div>
+         <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="dashboard"></mat-icon><br>
+         <span class="text">Nový prostor pro prvky</span>
+       </div>
+     </div>
+
+    <div (mouseleave)="showMoveIcon = false" (mouseenter)="showMoveIcon = true" class="menu-element-item grid-stack-item-menu" *ngFor="let abstractMenuPluginResolver of menuPluginResolverServices.abstractMenuPluginResolver" [attr.gs-w]="abstractMenuPluginResolver.gridWidth()" [attr.gs-h]="abstractMenuPluginResolver.gridHeight()">
         <mat-icon class="menu-image">{{abstractMenuPluginResolver.getMenuImage()}}</mat-icon><br>
         <span class="text">{{abstractMenuPluginResolver.name}}</span>
         <app-animation-hider [show] = "showMoveIcon">
