--- a/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.html
+++ b/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.html
@@ -1,2 +1,6 @@
-<ng-container #content class="grid-cell-item-content">
-</ng-container>
+<div class="cell-item">
+  <ng-container #content class="grid-cell-item-content">
+  </ng-container>
+  <app-grid-row [isDeepChild]="true" [row]="gridCellItem.row" *ngIf="gridCellItem.row"></app-grid-row>
+</div>
+
