--- a/frontend/src/app/page/components/palette-builder/palette-builder.component.html
+++ b/frontend/src/app/page/components/palette-builder/palette-builder.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     <h3 class="card-title">Editační plátno</h3>
   </div> <!-- /.card-body -->
-  <div class="card-body palette">
+  <div class="card-body palette" [class.sortable-js-dragged]="isSortableJsDragged">
     <app-palette-item-quick-menu></app-palette-item-quick-menu>
 
     <ul
@@ -13,7 +13,7 @@
       [sortablejs]="pageDetail.pageBlocks"
       [sortablejsOptions]="{ group: 'shared', scroll: false, handle: '.handle' }">
       <li (dragstart)="blockDragStart()" (dragend)="blockDragStop()" class="list-group-item palette-item" *ngFor="let item of pageDetail.pageBlocks; trackBy: trackByBlock">
-        <app-palette-block [test]="item" [pageBlock]="item" (resized)="isResized=$event"></app-palette-block>
+        <app-palette-block [pageBlock]="item" (resized)="isResized=$event"></app-palette-block>
       </li>
     </ul>
   </div>
