--- a/frontend/src/app/page/components/grid-cell/grid-cell.component.html
+++ b/frontend/src/app/page/components/grid-cell/grid-cell.component.html
@@ -1,4 +1,8 @@
-<div class="cell-content">
+<div class="cell-content"
+     [sortablejs]="cell.items"
+     [sortablejsOptions]="{group: {name: 'menu-row', pull: true, put: true}, onStart: onDragStart, onEnd: onDragEnd,
+     handle: '.icon-move-grid'}"
+>
   <app-grid-cell-item [gridCellItem]="item" *ngFor="let item of cell.items"></app-grid-cell-item>
 </div>
 <div *ngIf="!isLast" class="cell-delimiter" (mousedown)="onMouseDownResizeDelimiter($event);">
