--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.css
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.css
@@ -26,7 +26,7 @@
   position: relative;
 }
 
-i.icon-move{
+i.icon-move, i.icon-move-grid{
   position: absolute;
   top: 10px;
   color: black;
@@ -34,6 +34,10 @@ i.icon-move{
   left: 11px;
   cursor: move;
   font-size: 17px;
+}
+
+.grid-row-menu {
+  position: relative;
 }
 
 .lock {
@@ -52,5 +56,10 @@ i.icon-move{
   border-bottom: 1px solid black;
   padding: 5px;
   margin: 5px;
+}
+
+.menu-plugin-container {
+  position: relative;
+  width: 100%;
 }
 
