--- a/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.html
+++ b/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.html
@@ -2,5 +2,16 @@
   <ng-container #content class="grid-cell-item-content">
   </ng-container>
   <app-grid-row [isDeepChild]="true" [row]="gridCellItem.row" *ngIf="gridCellItem.row"></app-grid-row>
+
+  <app-animation-hider [show] = "showMoveIcon">
+    <div class="frameCover">
+      <div title="Přesunout" class="btn draganddrop">
+        <i class="material-icons icon-move-cell-item">open_with</i>
+      </div>
+      <div title="Smazat" class="btn draganddrop">
+        <i class="material-icons icon-remove">delete</i>
+      </div>
+    </div>
+  </app-animation-hider>
 </div>
 
