--- a/frontend/src/app/page/components/grid-cell/grid-cell.component.html
+++ b/frontend/src/app/page/components/grid-cell/grid-cell.component.html
@@ -1,7 +1,7 @@
 <div class="cell-content"
      [sortablejs]="cell.items"
-     [sortablejsOptions]="{group: {name: 'menu-row', pull: true, put: true}, onStart: onDragStart, onEnd: onDragEnd,
-     handle: '.icon-move-grid'}"
+     [sortablejsOptions]="{group: {name: 'cell', pull: true, put: ['menu-row', 'menu-plugin', 'cell']}, onStart: onDragStart, onEnd: onDragEnd,
+     handle: '.icon-move-cell-item'}"
 >
   <app-grid-cell-item [gridCellItem]="item" *ngFor="let item of cell.items"></app-grid-cell-item>
 </div>
