--- a/frontend/src/app/page/components/grid-row/grid-row.component.html
+++ b/frontend/src/app/page/components/grid-row/grid-row.component.html
@@ -2,5 +2,6 @@
                (resized$)="onCellResized($event, i)"
                class="col-md-{{cell.width}}"
                [class.resized]="isResized"
+               [isMouseEnterRow] = isMouseEnter
 >
 </app-grid-cell>
