--- a/frontend/src/app/page/components/grid-cell/grid-cell.component.html
+++ b/frontend/src/app/page/components/grid-cell/grid-cell.component.html
@@ -9,6 +9,8 @@
   <div class="delimiter-line"></div>
 </div>
 <app-animation-hider [show] = "isMouseEnterRow">
-<mat-icon class="add-cell-icon-left add-cell-icon" fontIcon="add"></mat-icon>
-<mat-icon class="add-cell-icon-right add-cell-icon" fontIcon="add"></mat-icon>
+<mat-icon class="add-cell-icon-left add-cell-icon" fontIcon="add" (click)="addCell$.emit('left')"></mat-icon>
+<mat-icon class="del-cell-icon-left del-cell-icon" fontIcon="remove" (click)="removeCell$.emit('left')"></mat-icon>
+<mat-icon class="add-cell-icon-right add-cell-icon" fontIcon="add" (click)="addCell$.emit('right')"></mat-icon>
+<mat-icon class="del-cell-icon-right del-cell-icon" fontIcon="remove" (click)="removeCell$.emit('right')"></mat-icon>
 </app-animation-hider>
